# surf

./: CMakeLists.txt  README.md  snow_simulator
include/: ball.h  entity.h  glfw_ancillary.h  head.h  loc.h  mesh.h  opengl_rendering.h  scene.h  shader.h  snow_flake.h  snow_scene.h
include/entities/: ball.h  entity.h  loc.h  snow_flake.h
include/rendering/: glfw_ancillary.h  mesh.h  mesh_loader.h  shader.h
include/scenes/: scene.h  snow_scene.h
src/: ball.cpp  entity.cpp  glfw_ancillary.cpp  main.cpp  mesh.cpp  opengl_rendering.cpp  scene.cpp  shader.cpp  snow_flake.cpp  snow_scene.cpp
src/entities/: ball.cpp  entity.cpp  snow_flake.cpp
src/rendering/: glfw_ancillary.cpp  mesh.cpp
src/scenes/: scene.cpp  snow_scene.cpp
